# vimeo-transcriber

./: .gitignore  README.md  pyproject.toml
src/vimeo_transcriber/: cli.py  config.py  downloader.py  formatter.py  pipeline.py  transcriber.py  utils.py
